--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,33 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+ 
 }
 
 
 
+.sidebar_card{
+  background-image: url('https://img.freepik.com/free-photo/blue-product-backdrop-with-patterned-glass_53876-132954.jpg?size=626&ext=jpg&ga=GA1.1.152971922.1680023370&semt=ais');
+  background-repeat: no-repeat; 
+  background-size: cover; 
+  background-attachment: fixed; 
 
+  
+}
+.sidebar_card::before{
+  content: '';
+   position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 5px;
+  border-radius: 1rem;
+
+  background: rgba(255,255,255,0.25);
+-webkit-backdrop-filter: blur(5px);
+backdrop-filter: blur(5px);
+border: 1px solid rgba(255,255,255,0.125);
+}
 
 
